syntax="proto3";

package wq;

message Msg{
	int32 id = 1;
	oneof union {
		Login login = 2;
		LoginReturnOk loginReturnOk = 3;
		LoginReturnFail loginReturnFail = 4;
		PlayerSetting playerSetting = 5;
		InviteAuto inviteAuto = 6;
		InvitePlayer invitePlayer = 7;
		InviteFail inviteFail = 8;
		CountBackward countBackward = 9;
	}
}

message Player{
	string pid = 1;
	string level = 2;
	bool isPlaying = 3;
	bool isAcceptInvite = 4;
	WaitCondition waitCond = 5;
}

message PlayerSetting {
	bool isAcceptInvite = 1;
	WaitCondition waitCond = 2;
}

message WaitCondition{
	int32 levelDiff = 1;
	int32 minSeconds = 2;
	int32 maxSeconds = 3;
	int32 minCountdown = 4;
	int32 maxCountdown = 5;
	int32 minTimesRetent = 6;
	int32 maxTimesRetent = 7;
	int32 minSecondsPerTime = 8;
	int32 maxSecondsPerTime = 9;
}

message Counting {
	int32 countdown = 1;
	int32 timesRetent = 2;
	int32 secondsPerTime = 3;
}

message InviteCondition {
	int32 levelDiff = 1;
	int32 seconds = 2;
	Counting counting = 3;
}

message InviteFail {
	string reason = 1;
}

message CountBackward {
	int32 id = 1;
	int32 num = 2;
}

message Login{
	string pid = 1;
	string passwd = 2;
}

message LoginReturnOk {
	Player player = 1;
}

message LoginReturnFail {
	string reason = 1;
}

message InviteAuto {
	InviteCondition inviteCondition = 1;
}

message InvitePlayer {
	string pid = 1;
	InviteCondition inviteCondition = 2;
}